tests/parser/validinput/parsestringasint.idp
vocabulary V{
	type t
	P(t)
}

structure S:V{
	P = {"3"}
}

include <table_utils>
procedure main(){
	if totable(S[V::P].ct)[1][1] == 3 then
		return 1
	end
	return 0

}
