tests/parser/invalidinput/parsestringasint.idp
vocabulary V{
	type t isa int
	P(t)
}

structure S:V{
	P = {"3"}
}

procedure main(){
	return 1
}
